--- a/workshop1-portfolio/styles.css
+++ b/workshop1-portfolio/styles.css
@@ -9,13 +9,13 @@
 
 body{
     background: #000000; /*สีพื้นหลัง*/
-    color: rgb(255, 255, 255); /*สีตัวอักษร*/
+    color: #ffffff; /*สีตัวอักษร*/
 }
 /*Header Section*/
 header{
     width: 100%;
     height: 100vh;
-    background-image: url(./1632282758162_polarr-removebg-preview.png);
+    background-image: url(./1623476202993_polarr.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -69,7 +69,7 @@ nav ul li a:hover::after{
 }
 
 .header-text h1 span{
-    color: #bd0707;
+    color: #fe0470;
 }
 
 .logo{
@@ -79,7 +79,7 @@ nav ul li a:hover::after{
 /*about section*/
 .about{
     padding: 80px 0;
-    color: #f36c6c;
+    color: #fe0470;
 }
 
 .row{
@@ -122,7 +122,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background-color: #ffffff;
+    background-color: #FADBCE;
     position: absolute;
     left: 0;
     bottom: -6px;
