--- a/workshop1-portfolio/styles.css
+++ b/workshop1-portfolio/styles.css
@@ -79,7 +79,7 @@ nav ul li a:hover::after{
 /*about section*/
 .about{
     padding: 80px 0;
-    color: #fe0470;
+    color: #c83072;
 }
 
 .row{
@@ -162,7 +162,7 @@ nav ul li a:hover::after{
 }
 
 .service-item{
-    background: #5e5e5e;
+    background: #c83072;
     padding: 40px;
     font-size: 13px;
     font-weight: 300;
@@ -190,7 +190,7 @@ nav ul li a:hover::after{
 }
 
 .service-item:hover{
-    background: #ca2d2d;
+    background: #850039;
     transform: translate(-10px);
 }
 
@@ -221,7 +221,7 @@ nav ul li a:hover::after{
 .layer{
     height: 0%;
     width: 100%;
-    background: linear-gradient(rgba(68, 0, 0, 0.6), #ca2d2d);
+    background: linear-gradient(rgba(255, 116, 178, 0.6), #fe0470);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -244,11 +244,11 @@ nav ul li a:hover::after{
 
 .layer a{
     margin-top: 20px;
-    color: #00054e;
+    color: #000044;
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
-    background: #ffecec;
+    background: #ffffff;
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -267,16 +267,16 @@ nav ul li a:hover::after{
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #FADBCE;
+    border: 1px solid #fe0470;
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
-    color: #ffecec;
+    color: #ffffff;
     transition: background 0.5s;
 }
 
 .btn:hover{
-    background: #ffd2bf;
+    background: #fe0470;
 }
 
 /*Contact Section*/
@@ -293,31 +293,31 @@ nav ul li a:hover::after{
 }
 
 .contact-left p i{
-    color: #861616;
+    color: #fe0470;
     margin-right: 15px;
     font-size: 25px;
 }
 
 .social-icons{
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .social-icons a{
     text-decoration: none;
     font-size: 30px;
-    margin-right: 15px;
+    margin-right: 10px;
     color: #f3eeee;
-    display: block;
+    display: 0;
 }
 
 .social-icons a:hover{
-    color: #a01e1e;
+    color: #fe0470;
     transform: rotateY(-5px);
 }
 
 .btn.btn2{
     display: inline-block;
-    background: #861616;
+    background: #ec0066;
 }
 
 .contact-right form{
@@ -328,10 +328,10 @@ form input, form textarea{
     width: 100%;
     border: 0;
     outline: none;
-    background: #dbdbdb;
+    background: #f1f1f1;
     padding: 15px;
-    margin: 15px 0;
-    color: #ffffff;
+    margin: 10px 0;
+    color: #ec0066;
     font-size: 18px;
     border-radius: 6px;
 }
@@ -347,11 +347,11 @@ form .btn2{
     width: 100%;
     text-align: center;
     padding: 25px 0;
-    background: #ffbfa3;
+    background: #ec0066;
     font-weight: 300;
     margin-top: 20px;
 }
 
 .copyright i{
-    color: #a30000;
+    color: #ffffff;
 }
